--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,13 +8,13 @@ environment:
   flutter: '>=3.7.0-1.4.pre'
 
 dependencies:
-  ffmpeg_kit_flutter_https_gpl: ^5.1.0
-  provider: ^6.0.5
+  ffmpeg_kit_flutter_https_gpl: ^6.0.3
+  provider: ^6.1.2
   flutter:
     sdk: flutter
-  path_provider: ^2.0.15
+  path_provider: ^2.1.5
   rich_console: ^1.0.4
-  uuid: ^3.0.7
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
@@ -25,7 +25,7 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
-flutter:
+#flutter:
 
 # To add assets to your package, add an assets section, like this:
 # assets:
